--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
+.buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    min-width: 50px;
+}
 
+button{
+    font-size: 11px;
+    width: fit-content;
+    padding: 0 15px;
+    cursor: pointer;
+}
+
+.active{
+    background-color: #008000;
+    color: #fff;
+}
