--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,9 @@
 button{
     font-size: 11px;
     width: fit-content;
-    padding: 0 15px;
+    padding: 5px 15px;
     cursor: pointer;
+    border-radius: 4px;
 }
 
 
